# django-init

./: .travis.yml  CHANGELOG.md  README.md  cookiecutter.json  run_test.sh
hooks/: post_gen_project.sh
{{cookiecutter.github_repository}}/: .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
{{cookiecutter.github_repository}}/docs/backend/: server_config.md
{{cookiecutter.github_repository}}/provisioner/: hosts  vars.yml
{{cookiecutter.github_repository}}/provisioner/roles/common/defaults/: main.yml
{{cookiecutter.github_repository}}/provisioner/roles/common/tasks/: main.yml
{{cookiecutter.github_repository}}/provisioner/roles/nginx/tasks/: letsencrypt.yml  main.yml
{{cookiecutter.github_repository}}/provisioner/roles/postgresql/defaults/: main.yml
{{cookiecutter.github_repository}}/provisioner/roles/postgresql/tasks/: main.yml
{{cookiecutter.github_repository}}/provisioner/roles/project_data/defaults/: main.yml
{{cookiecutter.github_repository}}/provisioner/roles/project_data/tasks/: main.yml
{{cookiecutter.github_repository}}/requirements/: development.txt
{{cookiecutter.github_repository}}/settings/: common.py  production.py
